# tasks-rs

./: .gitignore  Cargo.toml  README.md  docker-compose.yaml
config/: development.yaml
migrations/: 20250403091609_create-table-users.down.sql  20250403091609_create-table-users.up.sql  20250404112353_create-table-tasks.down.sql  20250404112353_create-table-tasks.up.sql
src/: app.rs  context.rs  lib.rs  router.rs
src/config/: db.rs  jwt.rs  logger.rs  mod.rs
src/controllers/: auth.rs  tasks.rs
src/errors/: mod.rs  response.rs
src/middlewares/: auth.rs  mod.rs  trace.rs
src/models/: auth.rs  mod.rs  tasks.rs  validator.rs
src/repositories/: mod.rs  tasks.rs  users.rs
tests/: mod.rs
tests/config/: mod.rs
tests/repositories/: users.rs
