[package]
name = "tasks-authenticated"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/bin/main.rs"
name = "tasks_authenticated"

[dependencies]
axum = { version = "0.8.3", features = ["macros"] }
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.15.11"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "tracing"] }
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }



