[package]
name = "tasks-authenticated"
version = "0.1.0"
edition = "2024"

[[bin]]
path = "src/bin/main.rs"
name = "tasks_authenticated"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.3", features = ["macros"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.35", features = ["derive"] }
color-eyre = "0.6.3"
config = "0.15.11"
dotenv = { version = "0.15.0", features = ["clap"] }
jsonwebtoken = { version = "9.3.1", features = ["use_pem"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "tls-native-tls", "chrono", "uuid"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
tower-http = { version = "0.6.2", features = ["trace"] }
tracing = "0.1.41"
tracing-error = "0.2.1"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "json", "tracing"] }
utoipa = { version = "5.3.1", features = ["chrono", "axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-rapidoc = { version = "6.0.0", features = ["axum"] }
utoipa-redoc = { version = "6.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }

[dev-dependencies]
serial_test = "3.2.0"



